--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "eslint": "^8.46.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^6.8.0"
+    "mongoose": "^6.8.0",
+    "nodemon": "^3.0.1"
   }
 }
