--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.46.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "memorystore": "^1.6.7",
     "mongoose": "^6.8.0",
     "nodemon": "^3.0.1"
   }
